Fix all tabs contents alignment.
Adds beginnings of the left sidenav.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,10 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.mynav .sidebar-nav, .mynav {
+    width: 0;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
